// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`refractor elements MessageTraitElement should refract to semantic ApiDOM tree 1`] = `
(MessageTraitElement
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (TagsElement))
  (MemberElement
    (StringElement)
    (ExternalDocumentationElement))
  (MemberElement
    (StringElement)
    (ArrayElement
      (MessageExampleElement
        (MemberElement
          (StringElement)
          (NumberElement))))))
`;

exports[`refractor elements given bindings field of type MessageBindingsElement should refract to semantic ApiDOM tree 1`] = `
(MessageTraitElement
  (MemberElement
    (StringElement)
    (MessageBindingsElement)))
`;

exports[`refractor elements given bindings field of type ReferenceElement should refract to semantic ApiDOM tree 1`] = `
(MessageTraitElement
  (MemberElement
    (StringElement)
    (ReferenceElement
      (MemberElement
        (StringElement)
        (StringElement)))))
`;

exports[`refractor elements given correlationId field of type CorrelationIDElement should refract to semantic ApiDOM tree 1`] = `
(MessageTraitElement
  (MemberElement
    (StringElement)
    (CorrelationIDElement)))
`;

exports[`refractor elements given correlationId field of type ReferenceElement should refract to semantic ApiDOM tree 1`] = `
(MessageTraitElement
  (MemberElement
    (StringElement)
    (ReferenceElement
      (MemberElement
        (StringElement)
        (StringElement)))))
`;

exports[`refractor elements given headers field of type ReferenceElement should refract to semantic ApiDOM tree 1`] = `
(MessageTraitElement
  (MemberElement
    (StringElement)
    (ReferenceElement
      (MemberElement
        (StringElement)
        (StringElement)))))
`;

exports[`refractor elements given headers field of type SchemaElement should refract to semantic ApiDOM tree 1`] = `
(MessageTraitElement
  (MemberElement
    (StringElement)
    (SchemaElement)))
`;
